[package]
name = "card_deck"
version = "0.1.0"
authors = ["André Zanellato <andre.zanellato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
djangohashers = "^1.3"
dotenv = "0.15.0"
reqwest = { version = "0.10.7", features = ["blocking","json"] }
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "diesel_postgres_pool", "json"]
